# ds4linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflow/: release.yaml
cmake/: FindLibevdev.cmake
common/: CMakeLists.txt
common/include/ds4linux/: constants.h  ipc_protocol.h  profile.h
common/src/: ipc_protocol.cpp  profile.cpp
config/: 99-ds4linux.rules  default_profile.json  ds4linux.conf  ds4linux.service
daemon/: CMakeLists.txt
daemon/include/ds4linux/: device_manager.h  input_device.h  ipc_server.h  profile_manager.h  virtual_device.h
daemon/src/: device_manager.cpp  input_device.cpp  ipc_server.cpp  main.cpp  profile_manager.cpp  virtual_device.cpp
gui/: CMakeLists.txt
gui/include/ds4linux/: device_widget.h  ipc_client.h  led_picker.h  main_window.h  profile_editor.h
gui/src/: device_widget.cpp  ipc_client.cpp  led_picker.cpp  main.cpp  main_window.cpp  profile_editor.cpp
scripts/: install.sh  postinst
udev-rule/: 99-ds4linux.rules
